force-app/main/default/objects/MedicationRequest__c/MedicationRequest__c.object-meta.xml
<CustomObject>
    <label>Medication Request</label>
    <nameField>
        <label>Medication Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medication Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>