force-app/main/default/objects/MedicationRequest__c/fields/Authored_On__c.field-meta.xml
<CustomField>
    <fullName>Authored_On__c</fullName>
    <label>Authored On</label>
    <type>DateTime</type>
</CustomField>