force-app/main/default/objects/MedicationRequest__c/fields/Dispense_Quantity__c.field-meta.xml
<CustomField><fullName
  >Dispense_Quantity__c</fullName><label>Dispense Quantity</label><type
  >Number</type><precision>16</precision><scale>3</scale></CustomField>