force-app/main/default/objects/MedicationRequest__c/fields/Dose_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dose_Quantity__c</fullName>
    <label>Dose Quantity</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>