force-app/main/default/objects/MedicationRequest__c/fields/Medication_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Medication_Code_System__c</fullName>
    <description>Default code system for medications is RxNorm. Global value set defaults are package-wide, so RxNorm is not marked default on LogicEMR_Code_System.</description>
    <label>Medication Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>