force-app/main/default/objects/MedicationRequest__c/fields/Medication_Ref__c.field-meta.xml
<CustomField>
    <fullName>Medication_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Medication_Display__c and Medication_Code__c remain snapshot fields populated at selection.</description>
    <label>Medication</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Medication Requests</relationshipLabel>
    <relationshipName>MedicationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>