force-app/main/default/objects/MedicationRequest__c/fields/Pharmacy__c.field-meta.xml
<CustomField><fullName
  >Pharmacy__c</fullName><label>Pharmacy</label><type>Text</type><length
  >255</length></CustomField>