force-app/main/default/objects/MedicationRequest__c/fields/Refills__c.field-meta.xml
<CustomField><fullName
  >Refills__c</fullName><label>Refills</label><type>Number</type><precision
  >3</precision><scale>0</scale></CustomField>