force-app/main/default/objects/MedicationRequest__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <description>TODO: confirm Route picklist values with a later prompt.</description>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Intravenous</fullName>
            </value>
            <value>
                <fullName>Intramuscular</fullName>
            </value>
            <value>
                <fullName>Subcutaneous</fullName>
            </value>
            <value>
                <fullName>Topical</fullName>
            </value>
            <value>
                <fullName>Inhalation</fullName>
            </value>
            <value>
                <fullName>Transdermal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>