force-app/main/default/objects/MedicationRequest__c/fields/Start_Date__c.field-meta.xml
<CustomField><fullName
  >Start_Date__c</fullName><label>Start Date</label><type
  >Date</type></CustomField>