force-app/main/default/objects/MedicationRequest__c/listViews/All_Medication_Requests.listView-meta.xml
<ListView>
    <fullName>All_Medication_Requests</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Medication_Display__c</columns>
    <columns>Status__c</columns>
    <columns>Intent__c</columns>
    <columns>Dosage_Text__c</columns>
    <columns>Requester__c</columns>
    <columns>Authored_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Medication Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>